Extend response of license endpoints
All the license endpoints now return the same schema for licenses.
