# routes/licenses.js
@@ -5,10 +5,14 @@ const errors = require('../services/util/errors');
 const routes = [];
 
 const licenseSchema = Joi.object({
+  code: Joi.string().required(),
+  name: Joi.string().required(),
   url: Joi.string()
     .uri()
     .required(),
-  code: Joi.string().required(),
+  groups: Joi.array()
+    .required()
+    .items(Joi.string()),
 });
 
 function handleError(h, { message }) {
@@ -43,7 +47,12 @@ routes.push({
     const { licenseStore } = request.server.app.services;
     const { licenseId } = request.params;
     const licenses = licenseStore.compatible(licenseId);
-    const response = licenses.map(({ url, name }) => ({ url: encodeURI(url), code: name }));
+    const response = licenses.map(({ id: code, url, name, groups }) => ({
+      code,
+      name,
+      url,
+      groups,
+    }));
     return h.response(response);
   },
 });
@@ -62,7 +71,12 @@ routes.push({
   handler: async (request, h) => {
     const { licenseStore } = request.server.app.services;
     const licenses = licenseStore.all();
-    const response = licenses.map(({ url, name }) => ({ url: encodeURI(url), code: name }));
+    const response = licenses.map(({ id: code, url, name, groups }) => ({
+      code,
+      name,
+      url,
+      groups,
+    }));
     return h.response(response);
   },
 });
@@ -79,10 +93,7 @@ routes.push({
       },
     },
     response: {
-      schema: Joi.object().keys({
-        code: Joi.string(),
-        url: Joi.string(),
-      }),
+      schema: licenseSchema,
     },
   },
   handler: async (request, h) => {
@@ -91,7 +102,8 @@ routes.push({
     try {
       const { title, wikiUrl } = await fileData.getFileData(fileUrlOrTitle);
       const license = await licenses.getLicense({ title, wikiUrl });
-      const response = { url: encodeURI(license.url), code: license.name };
+      const { id: code, name, url, groups } = license;
+      const response = { code, name, url, groups };
       return h.response(response);
     } catch (error) {
       return handleError(h, error);
